# ClusterChatClient

./: CMakeLists.txt  README.md  client.cpp
include/: public.h
include/model/: group.h  groupuser.h  user.h
src/model/: group.cpp  groupuser.cpp  user.cpp
